# ops-usermgmt

./: CMakeLists.txt  DESIGN.md  README.md
src/: daemon.c  usermgmt.c  usermgmt.h
